Updated java flags for Java 11